--- a/RecipezWeb/src/app/security/pages/login/login.component.html
+++ b/RecipezWeb/src/app/security/pages/login/login.component.html
@@ -1,34 +1,35 @@
 <div style="height: 100vh; display: flex; justify-content: center; align-items: center;">
     <div>
-    <p style="text-align: center;">Recipez</p>
-    <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
-        <nz-form-item>
-        <nz-form-control nzErrorTip="Please input your username!">
-            <nz-input-group nzPrefixIcon="user">
-            <input type="text" nz-input formControlName="userName" placeholder="Username" />
-            </nz-input-group>
-        </nz-form-control>
-        </nz-form-item>
-        <nz-form-item>
-        <nz-form-control nzErrorTip="Please input your Password!">
-            <nz-input-group nzPrefixIcon="lock">
-            <input type="password" nz-input formControlName="password" placeholder="Password" />
-            </nz-input-group>
-        </nz-form-control>
-        </nz-form-item>
-        <div nz-row class="login-form-margin">
-        <div nz-col [nzSpan]="12">
+        <div class="logo">
+            <img src="../../../../assets/Logo12.svg" alt="logo">
+        </div>
+        <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
+            <nz-form-item>
+                <nz-form-control nzErrorTip="Please input your username!">
+                    <nz-input-group nzPrefixIcon="user">
+                        <input type="text" nz-input formControlName="userName" placeholder="Usuario" />
+                    </nz-input-group>
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+                <nz-form-control nzErrorTip="Please input your Password!">
+                    <nz-input-group nzPrefixIcon="lock">
+                        <input type="password" nz-input formControlName="password" placeholder="Contraseña" />
+                    </nz-input-group>
+                </nz-form-control>
+            </nz-form-item>
+            <div nz-row class="login-form-margin">
+                <!--<div nz-col [nzSpan]="12">
             <label nz-checkbox formControlName="remember">
             <span>Remember me</span>
             </label>
         </div>
         <div nz-col [nzSpan]="12">
             <a class="login-form-forgot">Forgot password</a>
-        </div>
-        </div>
-        <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'" (click)="login()">Log in</button>
-        Or
-        <a>register now!</a>
-    </form>
+        </div>-->
+            </div>
+            <button nz-button class="login-form-button login-form-margin" style="background: #807DBA; color: white;"
+                (click)="login()">Log in</button>
+        </form>
     </div>
 </div>
