--- a/RecipezWeb/src/app/security/pages/login/login.component.scss
+++ b/RecipezWeb/src/app/security/pages/login/login.component.scss
@@ -13,3 +13,10 @@
   .login-form-button {
     width: 100%;
   }
+
+  .logo img {
+    display: inline-block;
+    height: 200px;
+    width: 200px;
+    vertical-align: middle;
+  }
