--- a/RecipezWeb/src/app/shared/sidebar/sidebar.component.html
+++ b/RecipezWeb/src/app/shared/sidebar/sidebar.component.html
@@ -15,13 +15,13 @@
         <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/welcome">Welcome</a>
+              <a routerLink="/reporte/pagos">Pagos</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a>Monitor</a>
+              <a routerLink="/reporte/usuarios">Usuarios</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a>Workplace</a>
+              <a routerLink="/reporte/recetas">Recetas</a>
             </li>
           </ul>
         </li>
