--- a/RecipezWeb/src/app/reporte/pages/reporte1/reporte1.component.html
+++ b/RecipezWeb/src/app/reporte/pages/reporte1/reporte1.component.html
@@ -1,1 +1,11 @@
-<p>reporte1 works!</p>
+<div class="chart-container">
+  <div class="title">Grafico Estadistico</div>
+  <div class="chart-wrapper">
+    <canvas
+      baseChart
+      type="line"
+      [data]="lineChartData"
+    >
+    </canvas>
+  </div>
+</div>
