cambio de thema de recipez

--- a/RecipezWeb/src/app/shared/sidebar/sidebar.component.scss
+++ b/RecipezWeb/src/app/shared/sidebar/sidebar.component.scss
@@ -34,7 +34,7 @@
     padding-left: 24px;
     overflow: hidden;
     line-height: 64px;
-    background: #001529;
+    background: #807DBA;
     transition: all .3s;
   }
   
