--- a/RecipezWeb/src/app/shared/sidebar/sidebar.component.html
+++ b/RecipezWeb/src/app/shared/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
               [nzTrigger]="null">
       <div class="sidebar-logo">
         <a href="https://ng.ant.design/" target="_blank">
-          <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
+          <img src="../../../../assets/Logo12.svg" alt="logo">
           <h1>Recipez</h1>
         </a>
       </div>
@@ -25,13 +25,13 @@
             </li>
           </ul>
         </li>
-        <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
+        <!--<li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
           <ul>
             <li nz-menu-item nzMatchRouter>
               <a>Basic Form</a>
             </li>
           </ul>
-        </li>
+        </li>-->
       </ul>
     </nz-sider>
     <nz-layout>
