--- a/RecipezWeb/src/app/shared/sidebar/sidebar.component.scss
+++ b/RecipezWeb/src/app/shared/sidebar/sidebar.component.scss
@@ -40,14 +40,14 @@
   
   .sidebar-logo img {
     display: inline-block;
-    height: 50px;
-    width: 50px;
+    height: 32px;
+    width: 32px;
     vertical-align: middle;
   }
   
   .sidebar-logo h1 {
     display: inline-block;
-    margin: 0 0 0 20px;
+    margin: 10px 0 0 20px;
     color: #fff;
     font-weight: 600;
     font-size: 14px;
