avance de maquetado
.

--- a/RecipezWeb/src/app/reporte/pages/reporte1/reporte1.component.html
+++ b/RecipezWeb/src/app/reporte/pages/reporte1/reporte1.component.html
@@ -1,11 +1,28 @@
-<div class="chart-container">
-  <div class="title">Grafico Estadistico</div>
-  <div class="chart-wrapper">
-    <canvas
-      baseChart
-      type="line"
-      [data]="lineChartData"
-    >
-    </canvas>
+
+  <div class="general">
+    <div class="chart-container">
+      <div class="title">Grafico Estadistico</div>
+      <div class="chart-wrapper">
+        <canvas
+          baseChart
+          type="line"
+          [data]="lineChartData"
+        >
+        </canvas>
+      </div>
+    </div>
+    
+    <div class="derecha">
+      <h1>Ingresos Acumulados</h1>
+      
+      </div>
   </div>
-</div>
+  
+
+
+
+
+
+
+
+
