--- a/RecipezWeb/src/app/reporte/pages/reporte2/reporte2.component.html
+++ b/RecipezWeb/src/app/reporte/pages/reporte2/reporte2.component.html
@@ -1,1 +1,14 @@
-<p>reporte2 works!</p>
+<div class="general">
+  <div class="chart-container">
+    <div class="title">Grafico Estadistico</div>
+    <div class="chart-wrapper">
+      <canvas baseChart type="doughnut" [data]="doughnutChartData" [options]="doughnutChartOption">
+      </canvas>
+    </div>
+  </div>
+
+  <div class="derecha">
+    <h1>Revision de usuarios reportados</h1>
+
+  </div>
+</div>
