--- a/RecipezWeb/src/app/reporte/pages/reporte1/reporte1.component.html
+++ b/RecipezWeb/src/app/reporte/pages/reporte1/reporte1.component.html
@@ -1,20 +1,20 @@
 
   <div class="general">
     <div class="chart-container">
-      <div class="title">Grafico Estadistico</div>
+      <div class="title">REPORTE ANUAL</div>
       <div class="chart-wrapper">
         <canvas
           baseChart
           type="line"
           [data]="lineChartData"
+          [options]="options"
         >
         </canvas>
       </div>
     </div>
     
     <div class="derecha">
-      <h1>Ingresos Acumulados</h1>
-      
+      <h1>INGRESOS ACUMULADOS</h1>
       </div>
   </div>
   
