--- a/RecipezWeb/src/app/reporte/pages/reporte3/reporte3.component.scss
+++ b/RecipezWeb/src/app/reporte/pages/reporte3/reporte3.component.scss
@@ -1,7 +1,7 @@
 .chart-container{
     
     height:25rem;
-    background-color: aquamarine;
+    background-color: white;
     border-radius: 10px;
     border-color: black;
     width: 25%;
@@ -20,9 +20,10 @@
         padding: auto;
         width:1200px;
         height:600px;
-        background-color: red;
+        background-color: white;
         display: flex;
         align-items: center;
+        text-align: center;
     }
     
     .title{
@@ -32,7 +33,7 @@
     .derecha{
          width:75%;
          height:100%;
-         background-color: yellow;
+         background-color: white;
          
     
     }
