--- a/RecipezWeb/src/app/reporte/pages/reporte3/reporte3.component.scss
+++ b/RecipezWeb/src/app/reporte/pages/reporte3/reporte3.component.scss
@@ -16,9 +16,7 @@
     }
     
     .general{
-        margin:auto;
-        padding: auto;
-        width:1200px;
+        width:80vw;
         height:600px;
         background-color: white;
         display: flex;
@@ -31,7 +29,7 @@
     }
     
     .derecha{
-         width:75%;
+         width:100%;
          height:100%;
          background-color: white;
          
