--- a/RecipezWeb/src/app/reporte/pages/reporte1/reporte1.component.scss
+++ b/RecipezWeb/src/app/reporte/pages/reporte1/reporte1.component.scss
@@ -32,9 +32,10 @@
 }
 
 .derecha{
-     width:30%;
-     height:100%;
-     background-color: white;
+    width:75%;
+    height:100%;
+    background-color: white;
+    text-align: center;
      
 
 }
