--- a/RecipezWeb/src/app/shared/sidebar/sidebar.component.html
+++ b/RecipezWeb/src/app/shared/sidebar/sidebar.component.html
@@ -15,11 +15,11 @@
         <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/reporte/pagos">Pagos</a>
+              <a routerLink="/reporte/pagos">Usuarios</a>
             </li>
-            <li nz-menu-item nzMatchRouter>
+            <!--<li nz-menu-item nzMatchRouter>
               <a routerLink="/reporte/usuarios">Usuarios</a>
-            </li>
+            </li>-->
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/reporte/recetas">Recetas</a>
             </li>
